# home-study

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_learning_dictionary_voice_profiles.py  0003_ai_provider_config.py  0004_dictionary_entries.py  0005_unknown_items.py  0006_speaker_profiles.py  0007_learning_item_audio.py  (+5 more)
backend/app/: __init__.py  main.py
backend/family_learning_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: __init__.py  build_local_dictionary.py  download_local_dictionary.ps1
backend/tests/: conftest.py  test_ai_settings.py  test_auth.py  test_backups.py  test_database_schema.py  test_dictation.py  test_dictation_api.py  test_dictation_recovery.py  test_dictation_stats.py  test_dictionary.py  test_dictionary_api.py  test_entrypoint_migrations.py  test_extended_stats.py  test_health.py  test_import_api.py  test_imports.py  test_initial_setup.py  test_jobs.py  test_learning_item_migration.py  test_learning_lists.py  test_local_dictionary.py  test_local_dictionary_builder.py  test_migrations.py  test_mimo_speech.py  test_mimo_tts.py  test_mimo_voice_clone.py  test_official_recording.py  test_openai_chat.py  test_reading_stats.py  test_recording_download.py  test_recording_recovery.py  test_recordings.py  test_review_lists.py  test_sentence_dictation.py  test_settings_api.py  test_spa.py  test_speaker_preview_api.py  test_speakers.py  test_speakers_api.py  test_tts.py  (+14 more)
(+151 files in other folders)
