[project]
name = "family-learning-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "cryptography>=43,<46",
  "pwdlib[argon2]>=0.3,<1",
  "openpyxl>=3.1,<4",
  "python-docx>=1.1,<2",
  "pypdf>=5,<6",
  "python-multipart>=0.0.20,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.core", "app.db", "app.models", "app.schemas", "app.services", "app.workers"]
